--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
+body{
+    font-size: 36px;
+    color: blue;
+}
+
+
 span {
     display:flex;
     align-items: center;
     justify-content: center;
-    font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
-    margin: 200px;
-    color:blue;
-}
+    margin: 200px 100px;
+}   
